--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -6,6 +6,11 @@
   scroll-behavior: smooth;
 }
 
+/* box shadow */
+.spatial-box-shadow{
+  box-shadow: 1px 4px 5px 1px rgba(0, 0, 0, 0.7) inset, -1px -3px 4px 1px rgba(0, 0, 0, 0.7) inset;
+}
+
 /*  */
 .bio_nav li {
   cursor: pointer;
